--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,9 +14,15 @@ steps:
 
 - script: |
     npm install
+  displayName: 'npm install'
+
+- script: |
     npm test
+  displayName: 'npm test'
+
+- script: |
     npm run build
-  displayName: 'npm install test and build'
+  displayName: 'npm build'
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
