--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,12 @@ steps:
 - script: |
     npm run build
   displayName: 'npm build'
-- task: PublishBuildArtifacts@1
+- task: CopyFiles@2
+  inputs:
+    targetFolder: '$(Build.ArtifactStagingDirectory)'    
+ 
+- task: PublishBuildArtifacts@1    
+  displayName: 'Publish Artifact: drop'
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
