--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,10 @@ steps:
   displayName: 'npm install'
 
 - script: |
+    npm test
+  displayName: 'npm test'
+
+- script: |
     npm run build
   displayName: 'npm build'
 
